--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "moment": "^2.29.1",
     "native-base": "^2.15.2",
     "react": "17.0.1",
+    "react-content-loader": "^6.0.3",
     "react-native": "0.64.0",
     "react-native-action-sheet-component": "0.0.36",
     "react-native-autoscroll-flatlist": "^1.10.1",
+    "react-native-big-list": "^1.3.9",
     "react-native-document-picker": "^5.0.3",
     "react-native-drop-down-item": "^1.1.0",
     "react-native-dropdown-menu": "^2.0.0",
@@ -40,9 +42,11 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-search-filter": "^0.1.5",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snackbar": "^2.4.0",
     "react-native-step-indicator": "^1.0.3",
+    "react-native-svg": "^12.1.1",
     "react-native-swipe-list-view": "^3.2.7",
     "react-native-table-component": "^1.2.1",
     "react-native-ui-stepper": "^1.2.4",
